Add menus for catalog

--- a/catalog.css
+++ b/catalog.css
@@ -31,6 +31,7 @@
     width: 15px;
     height: 10px;
     margin: 0 11px;
+    fill: black;
 }
 
 .filter-n-sort {
@@ -43,13 +44,58 @@
 }
 
 .filter-n-sort__filter {
-    margin-left: 15px;
+    padding-left: 15px;
     font-weight: 600;
     color: black;
+    position: relative;
+    list-style-type: none;
+    height: auto;
+    width: 360px;
 }
 
-.filter-img {
-    margin-left: 10px;
+.filter-head {
+    text-decoration: none;
+    color: black;
+    font-size: 13px;
+}
+
+.filter-menu-list {
+    display: none;
+    list-style-type: none;
+    text-transform: uppercase;
+    font-weight: normal;
+    color: #6F6E6E;
+    position: absolute;
+    left: 0;
+    top: -9px;
+    width: 360px;
+    z-index: 1;
+    background: white;
+    padding: 10px 17px 0;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.filter-menu-head .filter-head {
+    font-weight: 600;
+    color: #EF5B70;
+}
+
+.filter-menu-head .filter-icon {
+    fill: #EF5B70;
+}
+
+.filter-menu-elem-header {
+    padding: 11px;
+    margin: 14px 0;
+    font-size: 14px;
+    border-bottom: 1px solid #ebebeb;
+    border-left: 5px solid #EF5B70;
+}
+
+.filter-n-sort__filter:hover .filter-menu-list {
+    display: block;
 }
 
 .filter-n-sort__sort {
@@ -57,6 +103,7 @@
     justify-content: flex-end;
     align-items: center;
     color: #6F6E6E;
+    list-style-type: none;
 }
 
 .featured-items {
@@ -69,6 +116,7 @@
 
 .sort-btn {
     margin-right: 26px;
+    position: relative;
 }
 
 .downbtn {
@@ -126,4 +174,48 @@
 .pagination-link {
     text-decoration: none;
     color: inherit;
+}
+
+.category-menu {
+    display: none;
+    padding: 1px 17px;
+    margin-bottom: -5px;
+    list-style-type: none;
+    text-transform: capitalize;
+    transition: 0.5s;
+}
+
+.category-menu-elem {
+    margin: 11px 0;
+}
+
+.filter-menu-elem:hover .category-menu {
+    display: block;
+}
+
+.size-menu {
+    list-style-type: none;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: #6f6e6e;
+    padding: 1px 10px 10px;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    width: 79px;
+    position: absolute;
+    left: -7px;
+    z-index: 1;
+    background: white;
+    display: none;
+}
+
+.sort-btn:hover .size-menu {
+    display: block;
+}
+
+.checkbox {
+    width: 12px;
+    height: 12px;
+    margin: 5px;
+    border: 1px solid #ebebeb;
 }
