--- a/cart.sass
+++ b/cart.sass
@@ -1,5 +1,3 @@
-/* Vars */
-
 $red: #F16D7F
 $black: #000000
 $white: #FFFFFF
@@ -11,11 +9,23 @@ $elem-bd-color: #A4A4A4
 $dark-placeholder-color: #656565
 $light-placeholder-color: #B1B1B1
 
-/* Body */
+.breadcrumb-bkg
+    background: #F8F3F4
+
+.breadcrumb
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+.breadcrumb-leftpart
+    margin: 60px 0
+    font-size: 24px
+    line-height: 29px
+    color: $red
 
 .shopping-content
     display: flex
-    margin-top: 96px
+    margin-top: 93px
 
 .countblock
     display: flex
@@ -35,10 +45,15 @@ $light-placeholder-color: #B1B1B1
 .shopping-buttons
     display: flex
     justify-content: space-between
-    margin-top: 90px
+    margin-top: 68px
+
+.address-form-button
+    display: flex
+    justify-content: flex-start
+    margin: 10px 0 57.5px
 
 .cardbox
-    margin-bottom: 144px
+    margin-bottom: 124px
 
 .card-pic
     width: 262px
@@ -49,12 +64,12 @@ $light-placeholder-color: #B1B1B1
 
 .card-close
     background: $white
-    padding: 22px 28px 22px 24px
+    padding: 26px 23px 22px 75px
 
 .card-header
     font-size: 24px
     line-height: 29px
-    margin-bottom: 36px
+    margin-bottom: 41px
     color: $header-color
 
 .card-data
@@ -79,24 +94,30 @@ $light-placeholder-color: #B1B1B1
     text-decoration: none
     border: 1px solid $elem-bd-color
     color: $black
+    background: $white
     font-weight: 300
+    font-size: 14px
+    line-height: 17px
     padding: 17px 40px
 
 .quote-btn
     @extend .shopping-btn
     padding: 11px 15px
     color: $quote-btn-color
+    font-size: 11px
+    line-height: 13px
+    cursor: pointer
 
 .address-form-header
     font-weight: 300
     font-size: 16px
     line-height: 19px
     color: $header-color
-    margin: 20px 0
+    margin: 16px 0 10.5px
 
 .address-input
-    margin: 10.5px 0
-    padding: 13px 17px 16px
+    margin: 10px 0
+    padding: 13px 17px 15px
     font-size: 13px
     line-height: 16px
     color: $header-color
@@ -107,3 +128,50 @@ $light-placeholder-color: #B1B1B1
     @extend .address-input
     font-weight: 300
     color: $light-placeholder-color
+
+.calculator
+    padding: 39px 43px 42px 44px
+    background: #F5F3F3
+
+.subtotal
+    color: $quote-btn-color
+    font-size: 11px
+    line-height: 13px
+    text-align: right
+    margin-right: -8px
+
+.total
+    color: $header-color
+    font-weight: 300
+    font-size: 16px
+    line-height: 19px
+    text-align: right
+    margin: 12px -5px 21px 0
+
+.sum
+    margin-left: 22px
+
+.grandsum
+    color: $red
+    margin-left: 21px
+
+.upon-button
+    border-top: 1px solid #E2E2E2
+    padding-top: 17px
+
+.main-btn
+    display: block
+    padding: 15px 42px 16px 41px
+    text-decoration: none
+    color: $white
+    background: $red
+    font-weight: 300
+    font-size: 16px
+    line-height: 19px
+
+.main-btn:hover
+    color: $red
+    background: $white
+
+.card-close-img:hover
+    transform: scale(1.4)
