--- a/desktop.css
+++ b/desktop.css
@@ -48,6 +48,9 @@
         align-items: flex-start;
         padding: 287px 103px 0 0;
     }
+    .menu-anchor {
+        position: relative;
+    }
     .header__text {
         padding-left: 19px;
     }
@@ -105,22 +108,31 @@
     .prop__item_longcard {
         margin: 40px 0 0;
     }
-    .menu-block {
-        position: relative;
-    }
     .menu {
         font-size: 14px;
         line-height: 17px;
         display: none;
-        z-index: 1;
-    }
-    .menu-block:hover .menu {
-        display: block;
         background: white;
         position: absolute;
+        right: 0;
+        top: 0;
         width: 232px;
-        height: 764px;
-        padding: 33px;
+        height: 759px;
+        padding: 0 0 33px 33px;
+        z-index: 1;
+        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    }
+    .close-btn-container {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .close-btn {
+        width: 12px;
+        height: 12px;
+        margin: 16px;
+    }
+    .close-btn:hover {
+        transform: scale(2);
     }
     .submenu {
         padding: 22px;
