--- a/cart.sass
+++ b/cart.sass
@@ -99,6 +99,9 @@ $light-placeholder-color: #B1B1B1
     font-size: 14px
     line-height: 17px
     padding: 17px 40px
+    &:hover
+        color: $white
+        background: $elem-bd-color
 
 .quote-btn
     @extend .shopping-btn
