--- a/reg.sass
+++ b/reg.sass
@@ -16,6 +16,8 @@
         font-size: 11px
         line-height: 13px
         color: #000000
+        position: relative
+        margin: 0 17px
 
 .reg-input
     width: 360px
@@ -27,9 +29,12 @@
     color: #B1B1B1
 
 .reg-radiobtn
-    margin: 31px 0 33px
+    position: absolute
+    left: -17px
+    top: 1px
 
-.reg-pass
+.radiobuttons
+    margin: 9px 0 10px
 
 .reg-pass-help
     font-weight: 300
