Improve styles for main page (+BEM)

--- a/styles/mainpage.sass
+++ b/styles/mainpage.sass
@@ -6,3 +6,22 @@
 @import "upfooter"
 @import "middle-footer"
 @import "downfooter"
+
+@media (min-width: 768px)
+    @import "top-header-tablet"
+    @import "site-header-tablet"
+    @import "props-tablet"
+    @import "featured-items-tablet"
+    @import "upfooter-tablet"
+    @import "middle-footer-tablet"
+    @import "downfooter-tablet"
+
+@media (min-width: 1140px)
+    @import "init-desktop"
+    @import "top-header-desktop"
+    @import "site-header-desktop"
+    @import "props-desktop"
+    @import "featured-items-desktop"
+    @import "upfooter-desktop"
+    @import "middle-footer-desktop"
+    @import "downfooter-desktop"
