--- a/styles/product.sass
+++ b/styles/product.sass
@@ -135,3 +135,16 @@ $dc-red: #EF5B70
 
 @import "middle-footer"
 @import "downfooter"
+
+@media (min-width: 768px)
+    @import "top-header-tablet"
+    @import "featured-items-tablet"
+    @import "middle-footer-tablet"
+    @import "downfooter-tablet"
+
+@media (min-width: 1140px)
+    @import "init-desktop"
+    @import "top-header-desktop"
+    @import "featured-items-desktop"
+    @import "middle-footer-desktop"
+    @import "downfooter-desktop"
