--- a/styles/reg.sass
+++ b/styles/reg.sass
@@ -87,3 +87,14 @@
 
 @import "middle-footer"
 @import "downfooter"
+
+@media (min-width: 768px)
+    @import "top-header-tablet"
+    @import "middle-footer-tablet"
+    @import "downfooter-tablet"
+
+@media (min-width: 1140px)
+    @import "init-desktop"
+    @import "top-header-desktop"
+    @import "middle-footer-desktop"
+    @import "downfooter-desktop"
