--- a/styles/_middle-footer.sass
+++ b/styles/_middle-footer.sass
@@ -3,80 +3,46 @@
     display: flex
     flex-direction: column
     align-items: center
-    @media (min-width: 768px)
-        padding: 64px 0 140px
-    @media (min-width: 1140px)
-        flex-direction: row
-        justify-content: space-between
-        padding: 96px 0 153px
-    &_container
+    &-container
         background: rgba(244, 244, 244, 0.7) url('../img/layer41.jpeg')
         background-blend-mode: saturation
         background-position-x: -432px
         background-position-y: bottom
         background-repeat: no-repeat
         background-size: cover
-        @media (min-width: 768px)
-            background-position-x: -368px
-            background-position-y: 67px
-        @media (min-width: 1140px)
-            background: rgba(244, 244, 244, 0.7) url('../img/layer41.full.png')
-            background-position-y: bottom
-            background-repeat: no-repeat
-    &__topcontainer
+    &-topcontainer
         display: flex
         flex-direction: column
         align-items: center
-    &__img
+    &-img
         width: 93px
         margin-left: -20px
-        @media (min-width: 768px)
-            width: 96px
-    &__subpictext
+    &-subpictext
         margin: 29px 0 0
         font-size: 18px
         line-height: 22px
         text-align: center
         color: #222224
         width: 343px
-        @media (min-width: 768px)
-            font-size: 20px
-            line-height: 24px
-        @media (min-width: 1140px)
-            width: 362px
-    &__form
+    &-form
         margin: 68px 0 70px -5px
-        @media (min-width: 768px)
-            margin: 79px 0 0 -5px
-        @media (min-width: 1140px)
-            margin-top: 53px
-            margin-right: 96px
 
-.form__header
+.form-header
     text-transform: uppercase
     text-align: center
     font-weight: bold
     font-size: 24px
     line-height: 36px
     color: #222224
-    @media (min-width: 1140px)
-        line-height: 45px
 
-.form__subheader
+.form-subheader
     text-transform: uppercase
     text-align: center
     margin: 0 0 26px 4px
     font-size: 14px
     line-height: 12px
-    @media (min-width: 768px)
-        font-size: 18px
-        line-height: 27px
-        margin-bottom: 22px
-    @media (min-width: 1140px)
-        line-height: 18px
-        margin-bottom: 35px
 
-.form__input
+.form-input
     font-size: 14px
     line-height: 17px
     height: 47px
@@ -89,13 +55,8 @@
     margin-left: 3px
     border: none
     padding-left: 21px
-    @media (min-width: 768px)
-        height: 50px
-        width: 253px
-        margin-left: 13px
-        padding-left: 19px
 
-.form__subscribe
+.form-subscribe
     height: 47px
     width: 96px
     background: #F16D7F
@@ -107,14 +68,7 @@
     line-height: 17px
     text-align: center
     color: white
-    @media (min-width: 768px)
-        height: 50px
-        width: 102px
     &:hover
         background: white
         color: #F16D7F
         cursor: pointer
-
-.midfootersec_bkg
-    @media (min-width: 1140px)
-        background: #ededed
