--- a/styles/_upfooter.sass
+++ b/styles/_upfooter.sass
@@ -2,34 +2,24 @@
     display: flex
     flex-direction: column
     padding: 24px 0 57px
-    @media (min-width: 768px)
-        padding-bottom: 39px
-    @media (min-width: 1140px)
-        flex-direction: row
-        justify-content: space-between
-        padding: 81px 0 75px
     & a
         text-decoration: none
     &-bkg
         background: #222224
-    &__item
+    &-item
         display: flex
         flex-direction: column
         align-items: center
         margin: 22px 0 22px -1px
-        @media (min-width: 768px)
-            margin-top: 23px
-        &__img
+        &-img
             width: fit-content
-        &__header
+        &-header
             font-size: 19.96px
             line-height: 24px
             color: #FBFBFB
             padding: 15px 0
             margin: 12px 0 0 -3px
-            @media (min-width: 768px)
-                margin: 14px 0 0 -6px
-        &__text
+        &-text
             font-weight: 300
             font-size: 13.972px
             line-height: 17px
