--- a/styles/cart.sass
+++ b/styles/cart.sass
@@ -169,3 +169,14 @@ $light-placeholder-color: #B1B1B1
 
 @import "middle-footer"
 @import "downfooter"
+
+@media (min-width: 768px)
+    @import "top-header-tablet"
+    @import "middle-footer-tablet"
+    @import "downfooter-tablet"
+
+@media (min-width: 1140px)
+    @import "init-desktop"
+    @import "top-header-desktop"
+    @import "middle-footer-desktop"
+    @import "downfooter-desktop"
