--- a/styles/catalog.sass
+++ b/styles/catalog.sass
@@ -17,3 +17,18 @@
 @import "upfooter"
 @import "middle-footer"
 @import "downfooter"
+
+@media (min-width: 768px)
+    @import "top-header-tablet"
+    @import "featured-items-tablet"
+    @import "upfooter-tablet"
+    @import "middle-footer-tablet"
+    @import "downfooter-tablet"
+
+@media (min-width: 1140px)
+    @import "init-desktop"
+    @import "top-header-desktop"
+    @import "featured-items-desktop"
+    @import "upfooter-desktop"
+    @import "middle-footer-desktop"
+    @import "downfooter-desktop"
