--- a/styles/_breadcrumbs.sass
+++ b/styles/_breadcrumbs.sass
@@ -1,11 +1,13 @@
 .breadcrumb
     display: flex
-    justify-content: space-between
+    flex-direction: column
     align-items: center
+    justify-content: center
+    min-height: 148px
     &-bkg
         background: #F8F3F4
     &-leftpart
-        margin: 60px 0
+        margin: 24px 0
         font-size: 24px
         line-height: 29px
         color: #F16D7F
@@ -13,11 +15,8 @@
         font-weight: 300
         font-size: 14px
         line-height: 17px
+        margin: 8px 0 46px
         color: #636363
     &-current
         font-weight: 700
         color: #F16D7F
-
-.menu-anchor
-    @media (min-width: 1140px)
-        position: relative
