Responsive cart page with animation

--- a/styles/cart.sass
+++ b/styles/cart.sass
@@ -1,14 +1,14 @@
 @import "init"
 @import "top-header"
 @import "breadcrumbs"
-@import "cartpage"
+@import "cart-block"
 @import "middle-footer"
 @import "downfooter"
 
 @media (min-width: 768px)
     @import "top-header-tablet"
     @import "breadcrumbs-tablet"
-    @import "cartpage-tablet"
+    @import "cart-block-tablet"
     @import "middle-footer-tablet"
     @import "downfooter-tablet"
 
@@ -16,6 +16,6 @@
     @import "init-desktop"
     @import "top-header-desktop"
     @import "breadcrumbs-desktop"
-    @import "cartpage-desktop"
+    @import "cart-block-desktop"
     @import "middle-footer-desktop"
     @import "downfooter-desktop"
