Fix issues from lesson 2, plus breadcrumbs and reg page. Validate HTML

--- a/styles/_breadcrumbs.sass
+++ b/styles/_breadcrumbs.sass
@@ -20,3 +20,13 @@
     &-current
         font-weight: 700
         color: #F16D7F
+        text-decoration: none
+    &-link
+        font-weight: 300
+        font-size: 14px
+        line-height: 17px
+        margin: 8px 0 46px
+        color: #636363
+        text-decoration: none
+        &:hover
+            color: #F16D7F
