--- a/styles/reg.sass
+++ b/styles/reg.sass
@@ -90,11 +90,13 @@
 
 @media (min-width: 768px)
     @import "top-header-tablet"
+    @import "breadcrumbs-tablet"
     @import "middle-footer-tablet"
     @import "downfooter-tablet"
 
 @media (min-width: 1140px)
     @import "init-desktop"
     @import "top-header-desktop"
+    @import "breadcrumbs-desktop"
     @import "middle-footer-desktop"
     @import "downfooter-desktop"
