--- a/styles/catalog.sass
+++ b/styles/catalog.sass
@@ -20,6 +20,7 @@
 
 @media (min-width: 768px)
     @import "top-header-tablet"
+    @import "breadcrumbs-tablet"
     @import "featured-items-tablet"
     @import "upfooter-tablet"
     @import "middle-footer-tablet"
@@ -28,6 +29,7 @@
 @media (min-width: 1140px)
     @import "init-desktop"
     @import "top-header-desktop"
+    @import "breadcrumbs-desktop"
     @import "featured-items-desktop"
     @import "upfooter-desktop"
     @import "middle-footer-desktop"
