Fix responsive cart page & top menu

--- a/styles/_cart-block-desktop.sass
+++ b/styles/_cart-block-desktop.sass
@@ -11,24 +11,21 @@
 
 .cardbox
     width: 53%
-
-.cardbox-buttons
-    width: 100%
-    margin-top: 52px
-
-.cardbox-card
-    width: 100%
-    margin: 20px 0
-
-.cardbox-btn
-    font-size: 14px
-    line-height: 17px
-    padding: 17px 40px
-    text-transform: uppercase
-    font-weight: 300
+    &-buttons
+        width: 100%
+        margin-top: 52px
+    &-card
+        width: 100%
+        margin: 20px 0
+    &-btn
+        font-size: 14px
+        line-height: 17px
+        padding: 17px 40px
+        text-transform: uppercase
+        font-weight: 300
 
 .card-picture
-    width: 262px
+    height: 306px
 
 .card-header
     font-size: 24px
