--- a/styles/_cart-block.sass
+++ b/styles/_cart-block.sass
@@ -38,7 +38,7 @@ $cart-red: #F16D7F
         background: white
         font-size: tovw(12px)
         line-height: tovw(14px)
-        padding: 9px tovw(35px)
+        padding: 9px 9%
         &:hover
             color: white
             background: #A4A4A4
@@ -61,10 +61,11 @@ $cart-red: #F16D7F
     filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13))
 
 .card-picture
-    width: tovw(143.86px)
+    height: tovw(188px)
+    margin-bottom: -3px
 
 .textbox
-    margin: 13.5px 17px 38px
+    margin: 13.5px 17px 0
 
 .card-header
     font-size: tovw(16px)
@@ -188,4 +189,4 @@ $cart-red: #F16D7F
         color: $cart-red
 
 .prod-link
-    margin-bottom: -3px
+    display: block
