--- a/styles/product.sass
+++ b/styles/product.sass
@@ -25,6 +25,9 @@ $dc-red: #EF5B70
     &:hover .right-arrow
         transform: scale(2) rotate(180deg)
 
+.right-arrow
+    transform: rotate(180deg)
+
 .slide
     margin: 11px 42px
 
