--- a/styles/_top-header.sass
+++ b/styles/_top-header.sass
@@ -5,8 +5,9 @@
     display: flex
     justify-content: space-between
     align-items: center
-    img:hover
-        transform: scale(1.3)
+
+.scalable:hover
+    transform: scale(1.3)
 
 .leftpart
     display: flex
