--- a/styles/cart.sass
+++ b/styles/cart.sass
@@ -19,3 +19,6 @@
     @import "cart-block-desktop"
     @import "middle-footer-desktop"
     @import "downfooter-desktop"
+
+@media (max-width: 400px)
+    @import "cart-block-smallphone"
