--- a/styles/_filter-n-sort.sass
+++ b/styles/_filter-n-sort.sass
@@ -1,10 +1,81 @@
 $filter-red: #EF5B70
 
+.filter-menu
+    position: relative
+    &-box
+        width: 360px
+        margin-right: 30px
+        &-content
+            position: absolute
+            z-index: 1
+            top: -13px
+            background-color: #FFFFFF
+            display: flex
+            flex-direction: column
+            box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
+            padding: 13px 16px 16px
+            width: 100%
+            box-sizing: border-box
+            visibility: hidden
+    &-heading
+        font-weight: 600
+        margin-right: 11px
+        cursor: pointer
+    &-link
+        color: #6F6E6E
+        margin-bottom: 11px
+        margin-left: 18px
+        &:hover
+            color: $filter-red
+
+.filter-box
+    display: flex
+    position: relative
+    &-heading
+        list-style-type: none
+        display: flex
+        outline: none
+        cursor: pointer
+
+.main-text
+    font-size: 14px
+    line-height: 17px
+
+.filter-heading
+    font-weight: 600
+    color: #000000
+    margin-right: 11px
+    margin-left: 16px
+
+.pic-link
+    display: block
+    text-decoration: none
+
+.pink-text
+    color: $filter-red
+
+.catalog-link-box
+    display: flex
+
+.filter-section
+    padding: 11px 0 11px 11px
+    border-bottom: 1px solid #EBEBEB
+    border-left: 5px solid $filter-red
+    margin-top: 16px
+    width: 100%
+    list-style-type: none
+
+.filter-padding
+    padding-top: 25px
+
 .filter-icon
     width: 15px
     height: 10px
     margin: 0 11px
     fill: black
+    &-pink
+        @extend .filter-icon
+        fill: $filter-red
 
 .filter-n-sort
     display: flex
@@ -13,62 +84,16 @@ $filter-red: #EF5B70
     max-width: 718px
     font-size: 14px
     height: 112px
-    &__filter
-        padding-left: 15px
-        font-weight: 600
-        color: black
-        position: relative
-        list-style-type: none
-        height: auto
-        width: 360px
-        &:hover .filter-menu-list
-            display: block
-    &__sort
+    &-sort
         display: flex
-        justify-content: flex-end
-        align-items: center
         color: #6F6E6E
         list-style-type: none
 
-.filter-menu-list
+.filterMenu-off
     display: none
-    list-style-type: none
-    text-transform: uppercase
-    font-weight: normal
-    color: #6F6E6E
-    position: absolute
-    left: 0
-    top: -9px
-    width: 360px
-    z-index: 1
-    background: white
-    padding: 10px 17px 0
-    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-    font-size: 14px
-    line-height: 17px
 
-.filter-head
-    text-decoration: none
-    color: black
-    font-size: 13px
-
-.filter-menu-head .filter-head
-    font-weight: 600
-    color: $filter-red
-
-.filter-menu-head .filter-icon
-    fill: $filter-red
-
-.filter-menu-elem:hover .category-menu
-    display: block
-
-.filter-menu-elem-summary
-    padding: 11px
-    margin: 14px 0
-    font-size: 14px
-    border-bottom: 1px solid #ebebeb
-    border-left: 5px solid $filter-red
-    display: block
+.filterMenu-on
+    display: flex
 
 .sort-details-arrow
     margin-left: 11px
@@ -76,6 +101,8 @@ $filter-red: #EF5B70
 .sort-btn
     margin-right: 26px
     position: relative
+    display: flex
+    cursor: pointer
 
 .category-menu
     display: none
@@ -91,25 +118,31 @@ $filter-red: #EF5B70
         color: inherit
 
 .size-menu
+    display: block
     list-style-type: none
     font-size: 14px
-    line-height: 16px
+    line-height: 21px
     font-weight: 400
     color: #6f6e6e
+    background: white
     padding: 1px 10px 10px
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21)
-    width: 79px
     position: absolute
+    top: 25px
     left: -7px
     z-index: 1
-    background: white
-    display: none
-
-.sort-btn:hover .size-menu
-    display: block
+    width: 79px
+    visibility: hidden
+    &-elem
+        display: flex
+        &:hover
+            color: $filter-red
 
 .checkbox
     width: 12px
     height: 12px
     margin: 5px
     border: 1px solid #ebebeb
+
+.check-label
+    width: 100%
