--- a/styles/_top-header-desktop.sass
+++ b/styles/_top-header-desktop.sass
@@ -71,6 +71,8 @@
     color: #6f6e6e
     display: block
     margin-top: 11px
+    &:hover
+        color: #EF5B70
 
 .top-content
     margin: 0 0.5%
