--- a/styles/_upfooter.sass
+++ b/styles/_upfooter.sass
@@ -6,6 +6,10 @@
         text-decoration: none
     &-bkg
         background: #222224
+    &-link:hover .upfooter-item-header
+        color: #EF5B70
+    &-link:hover .upfooter-item-text
+        color: #EF5B70
     &-item
         display: flex
         flex-direction: column
