--- a/styles/reg.sass
+++ b/styles/reg.sass
@@ -32,8 +32,14 @@
         left: -17px
         top: 1px
 
+.reg-form-fieldset
+    border: none
+    display: flex
+    flex-direction: column
+
 .radiobuttons
     margin: 9px 0 10px
+    border: none
 
 .reg-pass-help
     font-weight: 300
