Fix bugs after getting response on homework for lesson 6

--- a/styles/_props-desktop.sass
+++ b/styles/_props-desktop.sass
@@ -7,3 +7,7 @@
         margin: 10px 0 -10px
         &_longcard
             margin: 40px 0 0
+            width: 100%
+    &-longcard
+        min-width: 1140px
+        min-height: 180px
