--- a/styles/product.sass
+++ b/styles/product.sass
@@ -93,7 +93,7 @@ $dc-red: #EF5B70
     border: none
     margin: 65px auto
 
-.filter-n-sort__sort
+.filter-n-sort-sort
     font-size: 14px
     line-height: 17px
     justify-content: center
