Fix ambernou issue with socials

--- a/styles/_downfooter.sass
+++ b/styles/_downfooter.sass
@@ -9,16 +9,19 @@
     padding: 42px 0 39px
     & a
         text-decoration: none
-    &__item
-        margin: 0 3.5px
-        background-color: white
-        width: 32px
-        height: 32px
-        display: flex
-        align-items: center
-        justify-content: center
-        &:hover
-            background-color: #F16D7F
+
+.social-item
+    margin: 0 3.5px
+    background-color: white
+    color: black
+    width: 32px
+    height: 32px
+    display: flex
+    align-items: center
+    justify-content: center
+    &:hover
+        background-color: #F16D7F
+        color: white
 
 .copyright
     font-size: 16px
