Fix ambernou issue with img on cart page

--- a/styles/_cart-block.sass
+++ b/styles/_cart-block.sass
@@ -62,7 +62,7 @@ $cart-red: #F16D7F
 
 .card-picture
     height: tovw(188px)
-    margin-bottom: -3px
+    display: block
 
 .textbox
     margin: 13.5px 17px 0
