Fix 3 ambernou issues

--- a/styles/_filter-n-sort.sass
+++ b/styles/_filter-n-sort.sass
@@ -98,9 +98,11 @@ $filter-red: #EF5B70
 .sort-details-arrow
     margin-left: 11px
 
+.size-btn-container
+    position: relative
+
 .sort-btn
     margin-right: 26px
-    position: relative
     display: flex
     cursor: pointer
 
