--- a/styles/catalog.sass
+++ b/styles/catalog.sass
@@ -18,6 +18,8 @@
 @import "middle-footer"
 @import "downfooter"
 
+@import "modal-window"
+
 @media (min-width: 768px)
     @import "top-header-tablet"
     @import "breadcrumbs-tablet"
